tests/negative/Internal/InstanceTermination.juvix
module InstanceTermination;

type Unit := unit;
open Unit;

type Box A := box A;

open Box;

trait
type T A := mkT {pp : A → A};
open T using {mkT};

instance
boxT {A} : {{T (Box A)}} → T (Box A) := mkT λ {x := x};

main : Box Unit := T.pp (box unit);
